tests/compile-error/bad_mutability.lang
fn main() -> i32 {
    let foo: i32 = 0;
    foo = 5;
    return foo;
}
